2010-12-15  John W. Eaton  <jwe@octave.org>

	Bug #31883.

	* cmd-hist.cc (command_history::do_clean_up_and_save,
	command_history::do_truncate_file,
	command_history::do_append, command_history::do_write,
	gnu_history::do_clean_up_and_save, gnu_history::do_truncate_file,
	gnu_history::do_append, gnu_history::do_write,
	gnu_history::do_read_range):
	Don't do anything if not initialized.

	* cmd-hist.cc, cmd-hist.h (command_history::initialize,
	command_history::is_initialized): New static functions.
	(command_history::do_initialize,
	command_history::do_is_initialized): New member functions.

	* cmd-hist.h (command_history::initialized): New data member.
	(comand_history::command_history): Initialize it.

2010-12-14  John W. Eaton  <jwe@octave.org>

	* lo-mappers.h (xcopysign (double)): Call copysign, not copysignf.
	(xmod): Call X_NINT, not D_NINT.  Call xfloor, not floor.
	Bug #31872.

2010-12-13  John W. Eaton  <jwe@octave.org>

	* CMatrix.cc (operator * (const Matrix& m, const ComplexMatrix&	a)):
	Fix cut and paste error.  Bug #31869.

2010-12-09  Marco Atzeri  <marco_atzeri@yahoo.it>

	* lo-specfun.cc (xgamma): Also handle negative integer values as
	special cases when using tgamma.  Bug #31772.

2010-11-25  John W. Eaton  <jwe@octave.org>

	* Sparse.cc (Sparse<T>::assign): Use correct endpoint for
	destination range when making room for new elements.
	Bug #31734.

2010-11-23  John W. Eaton  <jwe@octave.org>

	* oct-md5.cc (oct_md5_result_to_str): Avoid buffer overrun in
	call to sprintf.  Replace loop with a single call to sprintf.
	Bug #31689.

2010-11-23  John W. Eaton  <jwe@octave.org>

	* oct-md5.cc (oct_md5_file): Close file after reading.

2010-11-22  John W. Eaton  <jwe@octave.org>

	* boolSparse.cc (SparseBoolMatrix::sum, SparseBoolMatrix::any):
	Cast integer idx_vector argument to octave_idx_type.

2010-11-18  John W. Eaton  <jwe@octave.org>

	* chMatrix.cc (charMatrix::row_as_string): Never strip trailing
	nul characters.  Bug #31689.
